2006-03-07  Damon Chaplin  <damon@gnome.org>

	* Released 1.5.

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtkdoc-scan.in (ScanHeader): Print object name after <TITLE> in
	order to get get object hierarchy, signals and properties
	documentation appear automatically (#333380)

2006-01-24  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in: patch from Damon Chaplin to fix signal flag parsing

2006-01-08  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: patch from Jonathan Blandford to add support for a
	"--source-suffixes" option so you can scan files with any suffixes
	you want (e.g. C++ files).

2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mktmpl.in: Use \w+: instead of \S+: when
	matching parameter names, so that @Deprecated:2.10:
	works in template files like in source code comments.

	* gtkdoc-mkdb.in: Add a missing "and" to the versioned
	deprecation note.

2005-12-09  Stefan Kost  <ensonic@users.sf.net>

	* devhelp.xsl:
	  try more to downgrade devhelp for old file format

2005-12-09  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  add devhelp2 files
	* autogen.sh:
	  create a autoregen.sh
	* devhelp.xsl:
	* devhelp2.xsl:
	* gtk-doc.xsl:
	  generate two separate versions
	* gtkdoc-mkdb.in:
	  fix parsing const after type (#322556)
	* gtkdoc-mktmpl.in:
	  fix parseing multiline macro heads (#320588)
	* gtkdoc-scangobj.in:
	  allow additional root types (#323581)

2005-12-05  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): Allow parameters to be declared
	volatile (this happens in GLib nowadays)

2005-10-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  remove left-over debug-print

2005-10-10  Stefan Kost  <ensonic@users.sf.net>

	* devhelp.xsl:
	* gtkdoc-mkdb.in:
	  enhance gtkdoc devhelp output (#318129)

2005-10-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
          revert exchanging &nbsp; with &#160;
